remove jvm arguments